feat: Implement gRPC session management and improve developer setup
This commit introduces several major enhancements:

- **gRPC Session Management:** The command-line interface has been replaced with a full gRPC service. This service can manage multiple concurrent VNC sessions, each identified by a unique session ID. New RPCs have been added to start, stop, and list sessions.

- **gRPC Library Update:** The project now uses a version of `grpc-swift` that supports older versions of macOS at runtime, improving compatibility.

- **Developer Experience Overhaul:**
  - Added comprehensive `README.md` files at the root and for `RoyalVNCTool` to guide new developers.
  - Created a robust `setup_environment.sh` script that handles all dependencies, including submodules and Homebrew packages.
  - Added several debugging and testing scripts (`vnc_test.sh`, `send_hello_world.sh`, etc.) to make interacting with the gRPC service easier.
  - Documented the process for building, testing, code signing, and modifying the gRPC service.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/RoyalVNCKit-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/RoyalVNCKit-Package.xcscheme
@@ -63,6 +63,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "RoyalVNCKitGUIDemo"
+               BuildableName = "RoyalVNCKitGUIDemo"
+               BlueprintName = "RoyalVNCKitGUIDemo"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -82,6 +96,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "RoyalVNCKitGUIDemo"
+            BuildableName = "RoyalVNCKitGUIDemo"
+            BlueprintName = "RoyalVNCKitGUIDemo"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -98,15 +122,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "RoyalVNCTool"
-            BuildableName = "RoyalVNCTool"
-            BlueprintName = "RoyalVNCTool"
+            BlueprintIdentifier = "RoyalVNCKitGUIDemo"
+            BuildableName = "RoyalVNCKitGUIDemo"
+            BlueprintName = "RoyalVNCKitGUIDemo"
             ReferencedContainer = "container:">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
